# notion-analog

./: Cargo.toml  README.md  docker-compose.yaml
migrations/: 000001_initial_todo_table.up.sql  20240327055948_todo_table.up.sql
src/: lib.rs  main.rs
src/adapters/api/shared/: routes.rs
src/adapters/http/: routes.rs
src/application/services/: mod.rs  todo_service.rs
src/domain/: error.rs  mod.rs
src/domain/entities/: todo.rs
src/domain/repositories/: todo_repository.rs
src/infrastructure/db/: postgres_repository.rs
