[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
postgres = "0.19.7"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
strip = true
lto = true
panic = 'abort'
